2007-08-19  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/dl2.c: move stdbool.h to compat.h
	* src/drivers/hdlc.c: move stdbool.h to compat.h
	* src/drivers/llc.c: move stdbool.h to compat.h

2007-08-15  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: GPLv3 updates
	* NEWS: GPLv3 updates
	* README: GPLv3 updates
	* README-cvs: GPLv3 updates
	* THANKS: GPLv3 updates
	* doc/manual/Makefile.am: GPLv3 updates
	* doc/manual/news.texi: GPLv3 updates
	* src/drivers/cd.c: GPLv3 updates
	* src/drivers/dl.c: GPLv3 updates
	* src/drivers/dl2.c: GPLv3 updates
	* src/drivers/dl_ip.c: GPLv3 updates
	* src/drivers/hdlc.c: GPLv3 updates
	* src/drivers/ip.c: GPLv3 updates
	* src/drivers/ip_to_dlpi.c: GPLv3 updates
	* src/drivers/ldl.c: GPLv3 updates
	* src/drivers/nf.c: GPLv3 updates
	* src/drivers/np.c: GPLv3 updates
	* src/drivers/np_ip.c: GPLv3 updates
	* src/modules/cdi_conv.c: GPLv3 updates
	* src/modules/dlpi_conv.c: GPLv3 updates
	* src/modules/ip_strm_mod.c: GPLv3 updates
	* src/modules/ip_strm_mod.h: GPLv3 updates
	* src/modules/npi_conv.c: GPLv3 updates
	* src/test/ldltest.c: GPLv3 updates
	* src/util/ldlconfig.c: GPLv3 updates
	* tests/local.at: GPLv3 updates

2007-08-13  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: GPLv3 header update
	* README: GPLv3 header update
	* acinclude.m4: GPLv3 header update
	* configure.ac: GPLv3 header update
	* configure.nexusware: GPLv3 header update
	* strxns.dox.in: GPLv3 header update
	* strxns.spec.in: GPLv3 header update
	* debian/copyright: GPLv3 header update
	* debian/mscript_header.in: GPLv3 header update
	* debian/mscript_postinst.in: GPLv3 header update
	* debian/mscript_postrm.in: GPLv3 header update
	* debian/mscript_preinst.in: GPLv3 header update
	* debian/mscript_prerm.in: GPLv3 header update
	* debian/rules.in: GPLv3 header update
	* debian/strxns-core.postinst.in: GPLv3 header update
	* debian/strxns-core.postrm.in: GPLv3 header update
	* debian/strxns-core.preinst.in: GPLv3 header update