@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo
 @c =========================================================================
 @c
-@c @(#) $Id: news.texi,v 0.9.2.32 2007/08/15 05:35:38 brian Exp $
+@c @(#) $Id: news.texi,v 0.9.2.33 2007/10/15 17:26:12 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -53,7 +53,7 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2007/08/15 05:35:38 $ by $Author: brian $
+@c Last Modified $Date: 2007/10/15 17:26:12 $ by $Author: brian $
 @c
 @c =========================================================================
 
@@ -105,6 +105,9 @@ Added CDI interface specification texinfo (info, html, pdf) document.
 
 @item
 License upgrade to GPL Version 3.
+
+@item
+Changes to support 2.6.22.5-49.fc6 kernel: new dev_base list and new sk_buff format.
 
 @end itemize
 
